// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardHelpers generateChartIds should return consistent IDs: base id 1`] = `"lorem_ipsum"`;

exports[`GraphCardHelpers generateChartIds should return consistent IDs: category id 1`] = `"lorem_dolor-sir_ipsum"`;

exports[`GraphCardHelpers generateChartIds should return consistent IDs: threshold, capacity id 1`] = `"threshold_lorem_ipsum"`;

exports[`GraphCardHelpers generateChartSettings should return base graph settings: basic filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "dolor": "sit",
        "groupMetric": [
          "dolorSit",
        ],
        "isMetricDisplay": false,
        "isMultiMetric": false,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "area",
            "dolor": "sit",
            "id": "dolorSit",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "dolorSit",
            "strokeWidth": 2,
          },
        ],
        "padding": {
          "bottom": 75,
          "left": 75,
          "right": 45,
          "top": 45,
        },
        "stringId": "dolorSit",
      },
    },
  ],
}
`;

exports[`GraphCardHelpers generateChartSettings should return base graph settings: no filters 1`] = `
{
  "filtersSettings": [],
}
`;

exports[`GraphCardHelpers generateExtendedChartSettings should return extended graph settings: basic settings 1`] = `
{
  "lorem": "ipsum",
  "xAxisLabelIncrement": 5,
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers generateExtendedChartSettings should return extended graph settings: no settings 1`] = `
{
  "xAxisLabelIncrement": 1,
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers generateIsToolbarFilter should return a consistent check: is NOT a toolbar filter 1`] = `false`;

exports[`GraphCardHelpers generateIsToolbarFilter should return a consistent check: is toolbar filter 1`] = `true`;

exports[`GraphCardHelpers getChartXAxisLabelIncrement should return a x axis tick increment based on granularity: x axis tick increment 1`] = `
{
  "daily": 5,
  "monthly": 2,
  "quarterly": 1,
  "weekly": 2,
}
`;

exports[`GraphCardHelpers getTooltipDate should return a formatted date based on granularity: granularity based date 1`] = `
{
  "daily": "June 1",
  "monthly": "June 2019",
  "quarterly": "Jun 2019 - Sep 2019",
  "weekly": "Jun 1 - Jun 8 2019",
}
`;

exports[`GraphCardHelpers should have specific functions: graphCardHelpers 1`] = `
{
  "generateChartIds": [Function],
  "generateChartSettings": [Function],
  "generateExtendedChartSettings": [Function],
  "generateIsToolbarFilter": [Function],
  "getChartXAxisLabelIncrement": [Function],
  "getTooltipDate": [Function],
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers xAxisTickFormat should produce consistent x axis tick values: x axis should be undefined if date or granularity are missing 1`] = `
{
  "missingDate": undefined,
  "missingGranularity": undefined,
}
`;

exports[`GraphCardHelpers xAxisTickFormat should produce consistent x axis tick values: x axis tick values 1`] = `
{
  "daily": [
    "Jun 20",
    "Jun 21",
    "Jun 22",
    "Jun 23",
    "Jun 24",
    "Jun 25",
    "Jun 26",
    "Jun 27",
    "Jun 28",
    "Jun 29",
    "Jun 30",
    "Jul 1",
    "Jul 2",
    "Jul 3",
    "Jul 4",
    "Jul 5",
    "Jul 6",
    "Jul 7",
    "Jul 8",
    "Jul 9",
    "Jul 10",
    "Jul 11",
    "Jul 12",
    "Jul 13",
    "Jul 14",
    "Jul 15",
    "Jul 16",
    "Jul 17",
    "Jul 18",
    "Jul 19",
    "Jul 20",
  ],
  "monthly": [
    "Jul",
    "Aug",
    "Sep",
    "Oct",
    "Nov",
    "Dec",
    "Jan
2019",
    "Feb",
    "Mar",
    "Apr",
    "May",
    "Jun",
    "Jul",
  ],
  "quarterly": [
    "Jul",
    "Oct",
    "Jan
2017",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2018",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2019",
    "Apr",
    "Jul",
  ],
  "weekly": [
    "Apr 21",
    "Apr 28",
    "May 5",
    "May 12",
    "May 19",
    "May 26",
    "Jun 2",
    "Jun 9",
    "Jun 16",
    "Jun 23",
    "Jun 30",
    "Jul 7",
    "Jul 14",
  ],
}
`;

exports[`GraphCardHelpers yAxisTickFormat should produce consistent y axis tick values: y axis tick values 1`] = `
{
  "0.00001345": "0",
  "0.0000269": "0",
  "0.00004035": "0",
  "0.0000538": "0",
  "0.00006725": "0",
  "0.0000807": "0",
  "0.00009415": "0",
  "0.0001076": "0",
  "0.00012105": "0",
  "0.0001345": "0",
  "0.00014795": "0",
  "0.0001614": "0",
  "0.00017485": "0",
  "0.0001883": "0",
  "0.00020175": "0",
  "10.00030970249069": "10",
  "100.0030970249069": "100",
  "1000.0309702490689": "1K",
  "1000.030970249069": "1K",
  "10000.30970249069": "10K",
  "100003.09702490689": "100K",
  "1000030.9702490689": "1M",
  "10000309.70249069": "10M",
  "100003097.02490689": "100M",
  "100003097.02490711": "100M",
  "1000030970.249071": "1B",
  "1000030970.2490711": "1B",
  "10000309702.49071": "10B",
  "10000309702.490711": "10B",
  "100003097024.9071": "100B",
  "1000030970249.071": "1T",
  "10000309702490.71": "10T",
  "110.00340672739759": "110",
  "1100.0340672739758": "1.1K",
  "11000.34067273976": "11K",
  "110003.40672739758": "110K",
  "1100034.0672739758": "1.1M",
  "11000340.67273976": "11M",
  "110003406.72739758": "110M",
  "1100034067.2739782": "1.1B",
  "11000340672.73978": "11B",
  "110003406727.39783": "110B",
  "1100034067273.978": "1.1T",
  "11000340672739.781": "11T",
  "120.00371642988827": "120",
  "1200.0371642988828": "1.2K",
  "12000.371642988828": "12K",
  "120003.71642988827": "120K",
  "1200037.1642988827": "1.2M",
  "12000371.642988827": "12M",
  "120003716.42988828": "120M",
  "1200037164.2988853": "1.2B",
  "12000371642.988852": "12B",
  "120003716429.88853": "120B",
  "1200037164298.8853": "1.2T",
  "12000371642988.852": "12T",
  "130.00402613237895": "130",
  "1300.0402613237895": "1.3K",
  "13000.402613237897": "13K",
  "130004.02613237896": "130K",
  "1300040.2613237896": "1.3M",
  "13000402.613237895": "13M",
  "130004026.13237897": "130M",
  "1300040261.3237925": "1.3B",
  "13000402613.237923": "13B",
  "130004026132.37924": "130B",
  "1300040261323.7925": "1.3T",
  "13000402613237.924": "13T",
  "140.00433583486966": "140",
  "1400.0433583486965": "1.4K",
  "14000.433583486967": "14K",
  "140004.33583486965": "140K",
  "1400043.3583486965": "1.4M",
  "14000433.583486965": "14M",
  "140004335.83486965": "140M",
  "1400043358.3486996": "1.4B",
  "14000433583.486994": "14B",
  "140004335834.86996": "140B",
  "1400043358348.6995": "1.4T",
  "14000433583486.994": "14T",
  "150.00464553736035": "150",
  "1500.0464553736033": "1.5K",
  "15000.464553736036": "15K",
  "150004.64553736034": "150K",
  "1500046.4553736034": "1.5M",
  "15000464.553736035": "15M",
  "150004645.53736034": "150M",
  "1500046455.3736067": "1.5B",
  "15000464553.736065": "15B",
  "150004645537.36066": "150B",
  "1500046455373.6064": "1.5T",
  "15000464553736.066": "15T",
  "20.00061940498138": "20",
  "200.0061940498138": "200",
  "2000.061940498138": "2K",
  "20000.61940498138": "20K",
  "200006.19404981378": "200K",
  "2000061.9404981378": "2M",
  "20000619.40498138": "20M",
  "200006194.04981422": "200M",
  "2000061940.498142": "2B",
  "20000619404.981422": "20B",
  "200006194049.8142": "200B",
  "2000061940498.142": "2T",
  "30.000929107472068": "30",
  "300.0092910747207": "300",
  "3000.092910747207": "3K",
  "30000.929107472068": "30K",
  "300009.2910747207": "300K",
  "3000092.910747207": "3M",
  "30000929.10747207": "30M",
  "300009291.07472134": "300M",
  "3000092910.747213": "3B",
  "30000929107.472134": "30B",
  "300009291074.7213": "300B",
  "3000092910747.213": "3T",
  "40.00123880996276": "40",
  "400.0123880996276": "400",
  "4000.123880996276": "4K",
  "40001.23880996276": "40K",
  "400012.38809962757": "400K",
  "4000123.8809962757": "4M",
  "40001238.80996276": "40M",
  "400012388.09962845": "400M",
  "4000123880.996284": "4B",
  "40001238809.962845": "40B",
  "400012388099.6284": "400B",
  "4000123880996.284": "4T",
  "50.00154851245345": "50",
  "500.01548512453445": "500",
  "5000.154851245345": "5K",
  "50001.548512453446": "50K",
  "500015.48512453446": "500K",
  "5000154.851245345": "5M",
  "50001548.512453444": "50M",
  "500015485.12453556": "500M",
  "5000154851.245355": "5B",
  "50001548512.45355": "50B",
  "500015485124.5355": "500B",
  "5000154851245.355": "5T",
  "60.001858214944136": "60",
  "600.0185821494414": "600",
  "6000.185821494414": "6K",
  "60001.858214944135": "60K",
  "600018.5821494414": "600K",
  "6000185.821494414": "6M",
  "60001858.21494414": "60M",
  "600018582.1494427": "600M",
  "6000185821.494426": "6B",
  "60001858214.94427": "60B",
  "600018582149.4426": "600B",
  "6000185821494.426": "6T",
  "70.00216791743483": "70",
  "700.0216791743483": "700",
  "7000.216791743484": "7K",
  "70002.16791743482": "70K",
  "700021.6791743482": "700K",
  "7000216.791743482": "7M",
  "70002167.91743483": "70M",
  "700021679.1743498": "700M",
  "7000216791.743497": "7B",
  "70002167917.43498": "70B",
  "700021679174.3497": "700B",
  "7000216791743.497": "7T",
  "80.00247761992551": "80",
  "800.0247761992551": "800",
  "8000.247761992552": "8K",
  "80002.47761992551": "80K",
  "800024.7761992551": "800K",
  "8000247.761992551": "8M",
  "80002477.61992551": "80M",
  "800024776.1992569": "800M",
  "8000247761.992568": "8B",
  "80002477619.92569": "80B",
  "800024776199.2568": "800B",
  "8000247761992.568": "8T",
  "90.0027873224162": "90",
  "900.027873224162": "900",
  "9000.27873224162": "9K",
  "90002.7873224162": "90K",
  "900027.873224162": "900K",
  "9000278.73224162": "9M",
  "90002787.3224162": "90M",
  "900027873.224164": "900M",
  "9000278732.241638": "9B",
  "90002787322.4164": "90B",
  "900027873224.164": "900B",
  "9000278732241.639": "9T",
}
`;
